--- a/dre.html
+++ b/dre.html
@@ -8,7 +8,7 @@
         /* General Styles */
         body {
             font-family: Arial, sans-serif;
-            background-color: #f5f5f5; /* Lightened background */
+            background-color: #e0e0e0; /* Lightened background */
             color: #222; /* Darker text for contrast */
             margin: 0;
             padding: 0;
