--- a/dre.html
+++ b/dre.html
@@ -24,7 +24,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            background: linear-gradient(90deg, #ff6600, #0056b3);
+            background: linear-gradient(90deg, #fb4f14, #000000);
             padding: 15px 25px;
             position: fixed;
             width: 100%;
@@ -52,7 +52,7 @@
             top: 70px;
             width: 240px;
             height: 100vh;
-            background: url('https://source.unsplash.com/800x1200/?gradient,blue') no-repeat center;
+            background: linear-gradient(180deg, #fb4f14, #000000);
             background-size: cover;
             display: flex;
             flex-direction: column;
