--- a/dre.html
+++ b/dre.html
@@ -75,7 +75,8 @@
         }
 
         .sidebar a:hover {
-            background-color: rgba(0, 0, 0, 0.1);
+            background-color: black;
+            color: white;
         }
 
         /* Main Content */
@@ -149,66 +150,11 @@
         <a href="https://chat.openai.com/" target="_blank">ChatGPT</a>
         <a href="https://www.youtube.com/" target="_blank">YouTube</a>
         <a href="https://www.w3schools.com/" target="_blank">W3Schools</a>
+        <a href="https://github.com/writeItInCursive/Andre-website" target="_blank">GitHub</a>
+        <a href="https://www.office.com/" target="_blank">Office 365</a>
+        <a href="https://www.amazon.com/" target="_blank">Amazon</a>
+        <a href="https://www.wikipedia.org/" target="_blank">Wikipedia</a>
+        <a href="https://open.spotify.com/" target="_blank">Spotify</a>
     </aside>
-
-    <!-- Main Content -->
-    <main>
-        <section class="dashboard">
-            <h2>🌟 Welcome to Your Dashboard 🚀</h2>
-            <p>Access your favorite tools, test code, and explore new ideas.</p>
-        </section>
-
-        <!-- Code Editor Section -->
-        <section class="code-editor">
-            <h3>Live Code Editor</h3>
-            <textarea id="htmlCode" placeholder="Write HTML here..."></textarea>
-            <textarea id="cssCode" placeholder="Write CSS here..."></textarea>
-            <textarea id="jsCode" placeholder="Write JavaScript here..."></textarea>
-            <button onclick="runCode()">Run Code</button>
-            <iframe id="output"></iframe>
-        </section>
-
-        <!-- Python Code Editor -->
-        <section class="code-editor">
-            <h3>Python Code Editor</h3>
-            <textarea id="pythonCode" placeholder="Write Python here..."></textarea>
-            <button onclick="runPython()">Run Python</button>
-            <pre id="pythonOutput"></pre>
-        </section>
-    </main>
-
-    <!-- JavaScript for Code Execution -->
-    <script>
-        function runCode() {
-            let htmlCode = document.getElementById("htmlCode").value;
-            let cssCode = "<style>" + document.getElementById("cssCode").value + "</style>";
-            let jsCode = "<script>" + document.getElementById("jsCode").value + "<\/script>";
-
-            let output = document.getElementById("output").contentWindow.document;
-            output.open();
-            output.write(htmlCode + cssCode + jsCode);
-            output.close();
-        }
-    </script>
-
-    <!-- Load Pyodide (Python for the browser) -->
-    <script src="https://cdn.jsdelivr.net/pyodide/v0.22.1/full/pyodide.js"></script>
-    <script>
-        async function loadPyodideRuntime() {
-            window.pyodide = await loadPyodide();
-        }
-        loadPyodideRuntime();
-
-        async function runPython() {
-            let code = document.getElementById("pythonCode").value;
-            let outputElement = document.getElementById("pythonOutput");
-            try {
-                let result = await window.pyodide.runPython(code);
-                outputElement.textContent = result;
-            } catch (error) {
-                outputElement.textContent = "Error: " + error.message;
-            }
-        }
-    </script>
 </body>
 </html>
