--- a/dre.html
+++ b/dre.html
@@ -204,5 +204,10 @@
             }
         }
     </script>
+
+    <!-- JavaScript Alert Test -->
+    <script>
+        alert("JavaScript test successful!");
+    </script>
 </body>
 </html>
