--- a/dre.html
+++ b/dre.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -146,6 +146,17 @@
 
     <!-- Main Content -->
     <main>
+        <section class="dashboard">
+    <h2>🌟 Welcome to Your Dashboard 🚀</h2>
+    <p>Access your favorite tools, test code, and explore new ideas.</p>
+    
+    <!-- Live Clock Widget -->
+    <div class="widget">
+        <h3>🕒 Current Time</h3>
+        <p id="liveClock">Loading time...</p>
+    </div>
+</section>
+
         <section class="dashboard">
             <h2>🌟 Welcome to Your Dashboard 🚀</h2>
             <p>Access your favorite tools, test code, and explore new ideas.</p>
