--- a/dre.html
+++ b/dre.html
@@ -160,7 +160,12 @@
             <h2>🌟 Welcome to Your Dashboard 🚀</h2>
             <p>Access your favorite tools, test code, and explore new ideas.</p>
         </section>
-
+   <!-- Task Manager -->
+        <section class="task-manager">
+            <h3>✅ Task Manager</h3>
+            <input type="text" id="taskInput" placeholder="Enter a task...">
+            <button onclick="addTask()">Add Task</button>
+            <ul id="taskList"></ul>
         <!-- Code Editors -->
         <section class="code-editor">
             <h3>Live Code Editor</h3>
