--- a/dre.html
+++ b/dre.html
@@ -147,19 +147,19 @@
 
     <!-- Main Content -->
     <main>
-    
-    
-    <!-- Live Clock Widget -->
+     <!-- Live Clock Widget -->
     <div class="widget">
         <h3>🕒 Current Time</h3>
         <p id="liveClock">Loading time...</p>
     </div>
-</section>
 
-        <section class="dashboard">
-            <h2>🌟 Welcome to Your Dashboard 🚀</h2>
-            <p>Access your favorite tools, test code, and explore new ideas.</p>
-        </section>
+    <!-- Welcome Section -->
+    <section class="dashboard">
+        <h2>🌟 Welcome to Your Dashboard 🚀</h2>
+        <p>Access your favorite tools, test code, and explore new ideas.</p>
+    </section>
+</main>
+
    <!-- Task Manager -->
         <section class="task-manager">
             <h3>✅ Task Manager</h3>
